// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PR4a golden — computeCashSignal output, byte for byte > a snapshot time with no balance, and a balance with no time 1`] = `
{
  "balanceOnly": {
    "acceptedImpact": "0.00",
    "bankToday": "900.00",
    "cashBuffer": "100.00",
    "daily": [
      {
        "balance": "900.00",
        "date": "2026-05-14",
      },
      {
        "balance": "900.00",
        "date": "2026-05-15",
      },
      {
        "balance": "900.00",
        "date": "2026-05-16",
      },
      {
        "balance": "900.00",
        "date": "2026-05-17",
      },
      {
        "balance": "860.00",
        "date": "2026-05-18",
      },
      {
        "balance": "860.00",
        "date": "2026-05-19",
      },
      {
        "balance": "860.00",
        "date": "2026-05-20",
      },
      {
        "balance": "860.00",
        "date": "2026-05-21",
      },
      {
        "balance": "860.00",
        "date": "2026-05-22",
      },
      {
        "balance": "860.00",
        "date": "2026-05-23",
      },
      {
        "balance": "860.00",
        "date": "2026-05-24",
      },
      {
        "balance": "860.00",
        "date": "2026-05-25",
      },
      {
        "balance": "860.00",
        "date": "2026-05-26",
      },
      {
        "balance": "860.00",
        "date": "2026-05-27",
      },
      {
        "balance": "860.00",
        "date": "2026-05-28",
      },
      {
        "balance": "860.00",
        "date": "2026-05-29",
      },
    ],
    "endingBalance": "860.00",
    "endingDate": "2026-05-29",
    "events": [
      {
        "amount": "-40.00",
        "assumption": null,
        "date": "2026-05-18",
        "itemId": "<uuid>",
        "label": "Bill",
        "occurrenceDate": "2026-05-18",
        "occurrenceKey": "<uuid>|2026-05-18",
        "originalDate": "2026-05-18",
      },
    ],
    "fromDate": "2026-05-14",
    "horizonDays": 15,
    "incomeNotArrived": [],
    "lowestDate": "2026-05-18",
    "lowestProjected": "860.00",
    "matches": [],
    "maxSafeExtra": "760.00",
    "overdueAssumedPaid": [],
    "overdueOutsideForecast": [
      {
        "amount": "-40.00",
        "daysOverdue": 26,
        "dueDate": "2026-04-18",
        "itemId": "<uuid>",
        "label": "Bill",
        "occurrenceDate": "2026-04-18",
        "planKey": "<uuid>|2026-04-18",
      },
    ],
    "projectedExpenses": "40.00",
    "projectedIncome": "0.00",
    "snapshotAt": null,
    "snapshotSource": "manual",
    "startingBalance": "900.00",
    "status": "ready",
    "toDate": "2026-05-29",
  },
  "timeOnly": {
    "acceptedImpact": "0.00",
    "bankToday": "690.00",
    "cashBuffer": "100.00",
    "daily": [
      {
        "balance": "690.00",
        "date": "2026-05-14",
      },
      {
        "balance": "690.00",
        "date": "2026-05-15",
      },
      {
        "balance": "690.00",
        "date": "2026-05-16",
      },
      {
        "balance": "690.00",
        "date": "2026-05-17",
      },
      {
        "balance": "650.00",
        "date": "2026-05-18",
      },
      {
        "balance": "650.00",
        "date": "2026-05-19",
      },
      {
        "balance": "650.00",
        "date": "2026-05-20",
      },
      {
        "balance": "650.00",
        "date": "2026-05-21",
      },
      {
        "balance": "650.00",
        "date": "2026-05-22",
      },
      {
        "balance": "650.00",
        "date": "2026-05-23",
      },
      {
        "balance": "650.00",
        "date": "2026-05-24",
      },
      {
        "balance": "650.00",
        "date": "2026-05-25",
      },
      {
        "balance": "650.00",
        "date": "2026-05-26",
      },
      {
        "balance": "650.00",
        "date": "2026-05-27",
      },
      {
        "balance": "650.00",
        "date": "2026-05-28",
      },
      {
        "balance": "650.00",
        "date": "2026-05-29",
      },
    ],
    "endingBalance": "650.00",
    "endingDate": "2026-05-29",
    "events": [
      {
        "amount": "-40.00",
        "assumption": null,
        "date": "2026-05-18",
        "itemId": "<uuid>",
        "label": "Bill",
        "occurrenceDate": "2026-05-18",
        "occurrenceKey": "<uuid>|2026-05-18",
        "originalDate": "2026-05-18",
      },
    ],
    "fromDate": "2026-05-14",
    "horizonDays": 15,
    "incomeNotArrived": [],
    "lowestDate": "2026-05-18",
    "lowestProjected": "650.00",
    "matches": [],
    "maxSafeExtra": "550.00",
    "overdueAssumedPaid": [],
    "overdueOutsideForecast": [
      {
        "amount": "-40.00",
        "daysOverdue": 26,
        "dueDate": "2026-04-18",
        "itemId": "<uuid>",
        "label": "Bill",
        "occurrenceDate": "2026-04-18",
        "planKey": "<uuid>|2026-04-18",
      },
    ],
    "projectedExpenses": "40.00",
    "projectedIncome": "0.00",
    "snapshotAt": "2026-05-10T15:00:00.000Z",
    "snapshotSource": null,
    "startingBalance": "690.00",
    "status": "no_data",
    "toDate": "2026-05-29",
  },
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > full household, a fromDate window after the anchor 1`] = `
{
  "acceptedImpact": "-15.00",
  "bankToday": "2785.00",
  "cashBuffer": "500.00",
  "daily": [
    {
      "balance": "2780.00",
      "date": "2026-05-10",
    },
    {
      "balance": "2830.00",
      "date": "2026-05-11",
    },
    {
      "balance": "2800.00",
      "date": "2026-05-12",
    },
    {
      "balance": "2785.00",
      "date": "2026-05-13",
    },
    {
      "balance": "2785.00",
      "date": "2026-05-14",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-15",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-16",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-17",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-18",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-19",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-20",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-21",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-22",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-23",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-24",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-25",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-26",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-27",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-28",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-29",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-30",
    },
    {
      "balance": "2612.00",
      "date": "2026-05-31",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-01",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-02",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-03",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-04",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-05",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-06",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-07",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-08",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-09",
    },
  ],
  "endingBalance": "3112.00",
  "endingDate": "2026-06-09",
  "events": [
    {
      "amount": "-1500.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-05-01",
      "occurrenceKey": "<uuid>|2026-05-01",
      "originalDate": "2026-05-01",
    },
    {
      "amount": "-95.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-05-12",
      "occurrenceKey": "<uuid>|2026-05-12",
      "originalDate": "2026-05-12",
    },
    {
      "amount": "-150.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-04-30",
      "occurrenceKey": "avalanche:extra|2026-04-30",
      "originalDate": "2026-04-30",
    },
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-05-22",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-05-20",
      "occurrenceKey": "<uuid>|2026-05-20",
      "originalDate": "2026-05-22",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-05-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-05-25",
      "occurrenceKey": "debt:<uuid>|2026-05-25",
      "originalDate": "2026-05-25",
    },
    {
      "amount": "-150.00",
      "assumption": null,
      "date": "2026-05-31",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-05-31",
      "occurrenceKey": "avalanche:extra|2026-05-31",
      "originalDate": "2026-05-31",
    },
    {
      "amount": "-1500.00",
      "assumption": null,
      "date": "2026-06-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-06-01",
      "occurrenceKey": "<uuid>|2026-06-01",
      "originalDate": "2026-06-01",
    },
  ],
  "fromDate": "2026-05-10",
  "horizonDays": 30,
  "incomeNotArrived": [
    {
      "amount": "2000.00",
      "daysOverdue": 6,
      "dueDate": "2026-05-08",
      "itemId": "<uuid>",
      "label": "Paycheck",
      "occurrenceDate": "2026-05-08",
      "planKey": "<uuid>|2026-05-08",
    },
  ],
  "lowestDate": "2026-05-15",
  "lowestProjected": "1040.00",
  "matches": [
    {
      "ambiguous": false,
      "confidence": "medium",
      "dayDelta": 14,
      "difference": "-18.00",
      "offCurve": false,
      "planAmount": "-38.00",
      "planDate": "2026-04-25",
      "planItemId": "debt:<uuid>",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
    },
  ],
  "maxSafeExtra": "540.00",
  "overdueAssumedPaid": [
    {
      "confidence": "medium",
      "daysOverdue": 19,
      "dueDate": "2026-04-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-04-25",
      "planAmount": "-38.00",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
      "unpaidRemainder": "-18.00",
    },
  ],
  "overdueOutsideForecast": [
    {
      "amount": "-1500.00",
      "daysOverdue": 43,
      "dueDate": "2026-04-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-04-01",
      "planKey": "<uuid>|2026-04-01",
    },
    {
      "amount": "-95.00",
      "daysOverdue": 32,
      "dueDate": "2026-04-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-04-12",
      "planKey": "<uuid>|2026-04-12",
    },
    {
      "amount": "-120.00",
      "daysOverdue": 31,
      "dueDate": "2026-04-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-04-13",
      "planKey": "<uuid>|2026-04-13",
    },
    {
      "amount": "-40.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
    {
      "amount": "-15.00",
      "daysOverdue": 26,
      "dueDate": "2026-04-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-04-18",
      "planKey": "<uuid>|2026-04-18",
    },
    {
      "amount": "-140.00",
      "daysOverdue": 24,
      "dueDate": "2026-04-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-04-20",
      "planKey": "<uuid>|2026-04-20",
    },
  ],
  "projectedExpenses": "3918.00",
  "projectedIncome": "4050.00",
  "snapshotAt": "2026-05-08T15:00:00.000Z",
  "snapshotSource": "plaid",
  "startingBalance": "2980.00",
  "status": "ready",
  "toDate": "2026-06-09",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > full household, a window that ends before today 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "2785.00",
  "cashBuffer": "500.00",
  "daily": [
    {
      "balance": "3000.00",
      "date": "2026-05-01",
    },
    {
      "balance": "3000.00",
      "date": "2026-05-02",
    },
    {
      "balance": "3000.00",
      "date": "2026-05-03",
    },
    {
      "balance": "3000.00",
      "date": "2026-05-04",
    },
    {
      "balance": "3000.00",
      "date": "2026-05-05",
    },
    {
      "balance": "3000.00",
      "date": "2026-05-06",
    },
    {
      "balance": "3000.00",
      "date": "2026-05-07",
    },
    {
      "balance": "3000.00",
      "date": "2026-05-08",
    },
    {
      "balance": "2980.00",
      "date": "2026-05-09",
    },
    {
      "balance": "2780.00",
      "date": "2026-05-10",
    },
    {
      "balance": "2830.00",
      "date": "2026-05-11",
    },
  ],
  "endingBalance": "2830.00",
  "endingDate": "2026-05-11",
  "events": [],
  "fromDate": "2026-05-01",
  "horizonDays": 10,
  "incomeNotArrived": [
    {
      "amount": "2000.00",
      "daysOverdue": 6,
      "dueDate": "2026-05-08",
      "itemId": "<uuid>",
      "label": "Paycheck",
      "occurrenceDate": "2026-05-08",
      "planKey": "<uuid>|2026-05-08",
    },
  ],
  "lowestDate": "2026-05-10",
  "lowestProjected": "2780.00",
  "matches": [
    {
      "ambiguous": false,
      "confidence": "medium",
      "dayDelta": 14,
      "difference": "-18.00",
      "offCurve": false,
      "planAmount": "-38.00",
      "planDate": "2026-04-25",
      "planItemId": "debt:<uuid>",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
    },
  ],
  "maxSafeExtra": "2280.00",
  "overdueAssumedPaid": [
    {
      "confidence": "medium",
      "daysOverdue": 19,
      "dueDate": "2026-04-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-04-25",
      "planAmount": "-38.00",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
      "unpaidRemainder": "-18.00",
    },
  ],
  "overdueOutsideForecast": [
    {
      "amount": "-1500.00",
      "daysOverdue": 43,
      "dueDate": "2026-04-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-04-01",
      "planKey": "<uuid>|2026-04-01",
    },
    {
      "amount": "-95.00",
      "daysOverdue": 32,
      "dueDate": "2026-04-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-04-12",
      "planKey": "<uuid>|2026-04-12",
    },
    {
      "amount": "-120.00",
      "daysOverdue": 31,
      "dueDate": "2026-04-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-04-13",
      "planKey": "<uuid>|2026-04-13",
    },
    {
      "amount": "-40.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
    {
      "amount": "-15.00",
      "daysOverdue": 26,
      "dueDate": "2026-04-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-04-18",
      "planKey": "<uuid>|2026-04-18",
    },
    {
      "amount": "-140.00",
      "daysOverdue": 24,
      "dueDate": "2026-04-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-04-20",
      "planKey": "<uuid>|2026-04-20",
    },
  ],
  "projectedExpenses": "220.00",
  "projectedIncome": "50.00",
  "snapshotAt": "2026-05-08T15:00:00.000Z",
  "snapshotSource": "plaid",
  "startingBalance": "3000.00",
  "status": "ready",
  "toDate": "2026-05-11",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > full household, a window that starts after today 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "2785.00",
  "cashBuffer": "500.00",
  "daily": [
    {
      "balance": "1040.00",
      "date": "2026-05-20",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-21",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-22",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-23",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-24",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-25",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-26",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-27",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-28",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-29",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-30",
    },
    {
      "balance": "2612.00",
      "date": "2026-05-31",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-01",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-02",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-03",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-04",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-05",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-06",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-07",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-08",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-09",
    },
  ],
  "endingBalance": "3112.00",
  "endingDate": "2026-06-09",
  "events": [
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-05-22",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-05-20",
      "occurrenceKey": "<uuid>|2026-05-20",
      "originalDate": "2026-05-22",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-05-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-05-25",
      "occurrenceKey": "debt:<uuid>|2026-05-25",
      "originalDate": "2026-05-25",
    },
    {
      "amount": "-150.00",
      "assumption": null,
      "date": "2026-05-31",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-05-31",
      "occurrenceKey": "avalanche:extra|2026-05-31",
      "originalDate": "2026-05-31",
    },
    {
      "amount": "-1500.00",
      "assumption": null,
      "date": "2026-06-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-06-01",
      "occurrenceKey": "<uuid>|2026-06-01",
      "originalDate": "2026-06-01",
    },
  ],
  "fromDate": "2026-05-20",
  "horizonDays": 20,
  "incomeNotArrived": [
    {
      "amount": "2000.00",
      "daysOverdue": 6,
      "dueDate": "2026-05-08",
      "itemId": "<uuid>",
      "label": "Paycheck",
      "occurrenceDate": "2026-05-08",
      "planKey": "<uuid>|2026-05-08",
    },
  ],
  "lowestDate": null,
  "lowestProjected": "1040.00",
  "matches": [
    {
      "ambiguous": false,
      "confidence": "medium",
      "dayDelta": 14,
      "difference": "-18.00",
      "offCurve": false,
      "planAmount": "-38.00",
      "planDate": "2026-04-25",
      "planItemId": "debt:<uuid>",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
    },
  ],
  "maxSafeExtra": "540.00",
  "overdueAssumedPaid": [
    {
      "confidence": "medium",
      "daysOverdue": 19,
      "dueDate": "2026-04-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-04-25",
      "planAmount": "-38.00",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
      "unpaidRemainder": "-18.00",
    },
  ],
  "overdueOutsideForecast": [
    {
      "amount": "-1500.00",
      "daysOverdue": 43,
      "dueDate": "2026-04-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-04-01",
      "planKey": "<uuid>|2026-04-01",
    },
    {
      "amount": "-95.00",
      "daysOverdue": 32,
      "dueDate": "2026-04-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-04-12",
      "planKey": "<uuid>|2026-04-12",
    },
    {
      "amount": "-120.00",
      "daysOverdue": 31,
      "dueDate": "2026-04-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-04-13",
      "planKey": "<uuid>|2026-04-13",
    },
    {
      "amount": "-40.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
    {
      "amount": "-15.00",
      "daysOverdue": 26,
      "dueDate": "2026-04-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-04-18",
      "planKey": "<uuid>|2026-04-18",
    },
    {
      "amount": "-140.00",
      "daysOverdue": 24,
      "dueDate": "2026-04-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-04-20",
      "planKey": "<uuid>|2026-04-20",
    },
  ],
  "projectedExpenses": "1928.00",
  "projectedIncome": "4000.00",
  "snapshotAt": "2026-05-08T15:00:00.000Z",
  "snapshotSource": "plaid",
  "startingBalance": "1040.00",
  "status": "ready",
  "toDate": "2026-06-09",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > full household, default window from today 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "2785.00",
  "cashBuffer": "500.00",
  "daily": [
    {
      "balance": "2785.00",
      "date": "2026-05-14",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-15",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-16",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-17",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-18",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-19",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-20",
    },
    {
      "balance": "1040.00",
      "date": "2026-05-21",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-22",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-23",
    },
    {
      "balance": "2900.00",
      "date": "2026-05-24",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-25",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-26",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-27",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-28",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-29",
    },
    {
      "balance": "2762.00",
      "date": "2026-05-30",
    },
    {
      "balance": "2612.00",
      "date": "2026-05-31",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-01",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-02",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-03",
    },
    {
      "balance": "1112.00",
      "date": "2026-06-04",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-05",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-06",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-07",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-08",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-09",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-10",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-11",
    },
    {
      "balance": "3017.00",
      "date": "2026-06-12",
    },
    {
      "balance": "2897.00",
      "date": "2026-06-13",
    },
    {
      "balance": "2897.00",
      "date": "2026-06-14",
    },
    {
      "balance": "2897.00",
      "date": "2026-06-15",
    },
    {
      "balance": "2857.00",
      "date": "2026-06-16",
    },
    {
      "balance": "2857.00",
      "date": "2026-06-17",
    },
    {
      "balance": "2842.00",
      "date": "2026-06-18",
    },
    {
      "balance": "4842.00",
      "date": "2026-06-19",
    },
    {
      "balance": "4702.00",
      "date": "2026-06-20",
    },
    {
      "balance": "4702.00",
      "date": "2026-06-21",
    },
    {
      "balance": "4702.00",
      "date": "2026-06-22",
    },
    {
      "balance": "4702.00",
      "date": "2026-06-23",
    },
    {
      "balance": "4702.00",
      "date": "2026-06-24",
    },
    {
      "balance": "4664.00",
      "date": "2026-06-25",
    },
    {
      "balance": "4664.00",
      "date": "2026-06-26",
    },
    {
      "balance": "4664.00",
      "date": "2026-06-27",
    },
    {
      "balance": "4664.00",
      "date": "2026-06-28",
    },
  ],
  "endingBalance": "4664.00",
  "endingDate": "2026-06-28",
  "events": [
    {
      "amount": "-1500.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-05-01",
      "occurrenceKey": "<uuid>|2026-05-01",
      "originalDate": "2026-05-01",
    },
    {
      "amount": "-95.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-05-12",
      "occurrenceKey": "<uuid>|2026-05-12",
      "originalDate": "2026-05-12",
    },
    {
      "amount": "-150.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-04-30",
      "occurrenceKey": "avalanche:extra|2026-04-30",
      "originalDate": "2026-04-30",
    },
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-05-22",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-05-20",
      "occurrenceKey": "<uuid>|2026-05-20",
      "originalDate": "2026-05-22",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-05-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-05-25",
      "occurrenceKey": "debt:<uuid>|2026-05-25",
      "originalDate": "2026-05-25",
    },
    {
      "amount": "-150.00",
      "assumption": null,
      "date": "2026-05-31",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-05-31",
      "occurrenceKey": "avalanche:extra|2026-05-31",
      "originalDate": "2026-05-31",
    },
    {
      "amount": "-1500.00",
      "assumption": null,
      "date": "2026-06-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-06-01",
      "occurrenceKey": "<uuid>|2026-06-01",
      "originalDate": "2026-06-01",
    },
    {
      "amount": "-95.00",
      "assumption": null,
      "date": "2026-06-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-06-12",
      "occurrenceKey": "<uuid>|2026-06-12",
      "originalDate": "2026-06-12",
    },
    {
      "amount": "-120.00",
      "assumption": null,
      "date": "2026-06-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-06-13",
      "occurrenceKey": "<uuid>|2026-06-13",
      "originalDate": "2026-06-13",
    },
    {
      "amount": "-40.00",
      "assumption": null,
      "date": "2026-06-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-06-16",
      "occurrenceKey": "<uuid>|2026-06-16",
      "originalDate": "2026-06-16",
    },
    {
      "amount": "-15.00",
      "assumption": null,
      "date": "2026-06-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-06-18",
      "occurrenceKey": "<uuid>|2026-06-18",
      "originalDate": "2026-06-18",
    },
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-06-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-06-20",
      "occurrenceKey": "<uuid>|2026-06-20",
      "originalDate": "2026-06-20",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-06-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-06-25",
      "occurrenceKey": "debt:<uuid>|2026-06-25",
      "originalDate": "2026-06-25",
    },
  ],
  "fromDate": "2026-05-14",
  "horizonDays": 45,
  "incomeNotArrived": [
    {
      "amount": "2000.00",
      "daysOverdue": 6,
      "dueDate": "2026-05-08",
      "itemId": "<uuid>",
      "label": "Paycheck",
      "occurrenceDate": "2026-05-08",
      "planKey": "<uuid>|2026-05-08",
    },
  ],
  "lowestDate": "2026-05-15",
  "lowestProjected": "1040.00",
  "matches": [
    {
      "ambiguous": false,
      "confidence": "medium",
      "dayDelta": 14,
      "difference": "-18.00",
      "offCurve": false,
      "planAmount": "-38.00",
      "planDate": "2026-04-25",
      "planItemId": "debt:<uuid>",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
    },
  ],
  "maxSafeExtra": "540.00",
  "overdueAssumedPaid": [
    {
      "confidence": "medium",
      "daysOverdue": 19,
      "dueDate": "2026-04-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-04-25",
      "planAmount": "-38.00",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
      "unpaidRemainder": "-18.00",
    },
  ],
  "overdueOutsideForecast": [
    {
      "amount": "-1500.00",
      "daysOverdue": 43,
      "dueDate": "2026-04-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-04-01",
      "planKey": "<uuid>|2026-04-01",
    },
    {
      "amount": "-95.00",
      "daysOverdue": 32,
      "dueDate": "2026-04-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-04-12",
      "planKey": "<uuid>|2026-04-12",
    },
    {
      "amount": "-120.00",
      "daysOverdue": 31,
      "dueDate": "2026-04-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-04-13",
      "planKey": "<uuid>|2026-04-13",
    },
    {
      "amount": "-40.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
    {
      "amount": "-15.00",
      "daysOverdue": 26,
      "dueDate": "2026-04-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-04-18",
      "planKey": "<uuid>|2026-04-18",
    },
    {
      "amount": "-140.00",
      "daysOverdue": 24,
      "dueDate": "2026-04-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-04-20",
      "planKey": "<uuid>|2026-04-20",
    },
  ],
  "projectedExpenses": "4121.00",
  "projectedIncome": "6000.00",
  "snapshotAt": "2026-05-08T15:00:00.000Z",
  "snapshotSource": "plaid",
  "startingBalance": "2785.00",
  "status": "ready",
  "toDate": "2026-06-28",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > full household, snapshot dated after today 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "3000.00",
  "cashBuffer": "500.00",
  "daily": [
    {
      "balance": "3000.00",
      "date": "2026-05-14",
    },
    {
      "balance": "1255.00",
      "date": "2026-05-15",
    },
    {
      "balance": "1255.00",
      "date": "2026-05-16",
    },
    {
      "balance": "1255.00",
      "date": "2026-05-17",
    },
    {
      "balance": "1255.00",
      "date": "2026-05-18",
    },
    {
      "balance": "1255.00",
      "date": "2026-05-19",
    },
    {
      "balance": "1255.00",
      "date": "2026-05-20",
    },
    {
      "balance": "1255.00",
      "date": "2026-05-21",
    },
    {
      "balance": "3115.00",
      "date": "2026-05-22",
    },
    {
      "balance": "3115.00",
      "date": "2026-05-23",
    },
    {
      "balance": "3115.00",
      "date": "2026-05-24",
    },
    {
      "balance": "2977.00",
      "date": "2026-05-25",
    },
    {
      "balance": "2977.00",
      "date": "2026-05-26",
    },
    {
      "balance": "2977.00",
      "date": "2026-05-27",
    },
    {
      "balance": "2977.00",
      "date": "2026-05-28",
    },
    {
      "balance": "2977.00",
      "date": "2026-05-29",
    },
    {
      "balance": "2977.00",
      "date": "2026-05-30",
    },
    {
      "balance": "2827.00",
      "date": "2026-05-31",
    },
    {
      "balance": "1327.00",
      "date": "2026-06-01",
    },
    {
      "balance": "1327.00",
      "date": "2026-06-02",
    },
    {
      "balance": "1327.00",
      "date": "2026-06-03",
    },
    {
      "balance": "1327.00",
      "date": "2026-06-04",
    },
    {
      "balance": "3327.00",
      "date": "2026-06-05",
    },
    {
      "balance": "3327.00",
      "date": "2026-06-06",
    },
    {
      "balance": "3327.00",
      "date": "2026-06-07",
    },
    {
      "balance": "3327.00",
      "date": "2026-06-08",
    },
    {
      "balance": "3327.00",
      "date": "2026-06-09",
    },
    {
      "balance": "3327.00",
      "date": "2026-06-10",
    },
    {
      "balance": "3327.00",
      "date": "2026-06-11",
    },
    {
      "balance": "3232.00",
      "date": "2026-06-12",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-13",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-14",
    },
    {
      "balance": "3112.00",
      "date": "2026-06-15",
    },
    {
      "balance": "3072.00",
      "date": "2026-06-16",
    },
    {
      "balance": "3072.00",
      "date": "2026-06-17",
    },
    {
      "balance": "3057.00",
      "date": "2026-06-18",
    },
    {
      "balance": "5057.00",
      "date": "2026-06-19",
    },
    {
      "balance": "4917.00",
      "date": "2026-06-20",
    },
    {
      "balance": "4917.00",
      "date": "2026-06-21",
    },
    {
      "balance": "4917.00",
      "date": "2026-06-22",
    },
    {
      "balance": "4917.00",
      "date": "2026-06-23",
    },
    {
      "balance": "4917.00",
      "date": "2026-06-24",
    },
    {
      "balance": "4879.00",
      "date": "2026-06-25",
    },
    {
      "balance": "4879.00",
      "date": "2026-06-26",
    },
    {
      "balance": "4879.00",
      "date": "2026-06-27",
    },
    {
      "balance": "4879.00",
      "date": "2026-06-28",
    },
  ],
  "endingBalance": "4879.00",
  "endingDate": "2026-06-28",
  "events": [
    {
      "amount": "-1500.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-05-01",
      "occurrenceKey": "<uuid>|2026-05-01",
      "originalDate": "2026-05-01",
    },
    {
      "amount": "-95.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-05-12",
      "occurrenceKey": "<uuid>|2026-05-12",
      "originalDate": "2026-05-12",
    },
    {
      "amount": "-150.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-04-30",
      "occurrenceKey": "avalanche:extra|2026-04-30",
      "originalDate": "2026-04-30",
    },
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-05-22",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-05-20",
      "occurrenceKey": "<uuid>|2026-05-20",
      "originalDate": "2026-05-22",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-05-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-05-25",
      "occurrenceKey": "debt:<uuid>|2026-05-25",
      "originalDate": "2026-05-25",
    },
    {
      "amount": "-150.00",
      "assumption": null,
      "date": "2026-05-31",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-05-31",
      "occurrenceKey": "avalanche:extra|2026-05-31",
      "originalDate": "2026-05-31",
    },
    {
      "amount": "-1500.00",
      "assumption": null,
      "date": "2026-06-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-06-01",
      "occurrenceKey": "<uuid>|2026-06-01",
      "originalDate": "2026-06-01",
    },
    {
      "amount": "-95.00",
      "assumption": null,
      "date": "2026-06-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-06-12",
      "occurrenceKey": "<uuid>|2026-06-12",
      "originalDate": "2026-06-12",
    },
    {
      "amount": "-120.00",
      "assumption": null,
      "date": "2026-06-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-06-13",
      "occurrenceKey": "<uuid>|2026-06-13",
      "originalDate": "2026-06-13",
    },
    {
      "amount": "-40.00",
      "assumption": null,
      "date": "2026-06-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-06-16",
      "occurrenceKey": "<uuid>|2026-06-16",
      "originalDate": "2026-06-16",
    },
    {
      "amount": "-15.00",
      "assumption": null,
      "date": "2026-06-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-06-18",
      "occurrenceKey": "<uuid>|2026-06-18",
      "originalDate": "2026-06-18",
    },
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-06-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-06-20",
      "occurrenceKey": "<uuid>|2026-06-20",
      "originalDate": "2026-06-20",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-06-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-06-25",
      "occurrenceKey": "debt:<uuid>|2026-06-25",
      "originalDate": "2026-06-25",
    },
  ],
  "fromDate": "2026-05-14",
  "horizonDays": 45,
  "incomeNotArrived": [
    {
      "amount": "2000.00",
      "daysOverdue": 6,
      "dueDate": "2026-05-08",
      "itemId": "<uuid>",
      "label": "Paycheck",
      "occurrenceDate": "2026-05-08",
      "planKey": "<uuid>|2026-05-08",
    },
  ],
  "lowestDate": "2026-05-15",
  "lowestProjected": "1255.00",
  "matches": [
    {
      "ambiguous": false,
      "confidence": "medium",
      "dayDelta": 14,
      "difference": "-18.00",
      "offCurve": false,
      "planAmount": "-38.00",
      "planDate": "2026-04-25",
      "planItemId": "debt:<uuid>",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
    },
  ],
  "maxSafeExtra": "755.00",
  "overdueAssumedPaid": [
    {
      "confidence": "medium",
      "daysOverdue": 19,
      "dueDate": "2026-04-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-04-25",
      "planAmount": "-38.00",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-20.00",
      "txnId": "<uuid>",
      "unpaidRemainder": "-18.00",
    },
  ],
  "overdueOutsideForecast": [
    {
      "amount": "-1500.00",
      "daysOverdue": 43,
      "dueDate": "2026-04-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-04-01",
      "planKey": "<uuid>|2026-04-01",
    },
    {
      "amount": "-95.00",
      "daysOverdue": 32,
      "dueDate": "2026-04-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-04-12",
      "planKey": "<uuid>|2026-04-12",
    },
    {
      "amount": "-120.00",
      "daysOverdue": 31,
      "dueDate": "2026-04-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-04-13",
      "planKey": "<uuid>|2026-04-13",
    },
    {
      "amount": "-40.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
    {
      "amount": "-15.00",
      "daysOverdue": 26,
      "dueDate": "2026-04-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-04-18",
      "planKey": "<uuid>|2026-04-18",
    },
    {
      "amount": "-140.00",
      "daysOverdue": 24,
      "dueDate": "2026-04-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-04-20",
      "planKey": "<uuid>|2026-04-20",
    },
  ],
  "projectedExpenses": "4121.00",
  "projectedIncome": "6000.00",
  "snapshotAt": "2026-05-20T15:00:00.000Z",
  "snapshotSource": "plaid",
  "startingBalance": "3000.00",
  "status": "ready",
  "toDate": "2026-06-28",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > no snapshot, a window that starts after today: a plan before the window lands on its first day 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "1800.00",
  "cashBuffer": "200.00",
  "daily": [
    {
      "balance": "1735.00",
      "date": "2026-05-20",
    },
    {
      "balance": "1735.00",
      "date": "2026-05-21",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-22",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-23",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-24",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-25",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-26",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-27",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-28",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-29",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-30",
    },
    {
      "balance": "3235.00",
      "date": "2026-05-31",
    },
    {
      "balance": "3235.00",
      "date": "2026-06-01",
    },
    {
      "balance": "3235.00",
      "date": "2026-06-02",
    },
    {
      "balance": "3235.00",
      "date": "2026-06-03",
    },
    {
      "balance": "3235.00",
      "date": "2026-06-04",
    },
    {
      "balance": "4735.00",
      "date": "2026-06-05",
    },
    {
      "balance": "4735.00",
      "date": "2026-06-06",
    },
    {
      "balance": "4735.00",
      "date": "2026-06-07",
    },
    {
      "balance": "4735.00",
      "date": "2026-06-08",
    },
    {
      "balance": "4735.00",
      "date": "2026-06-09",
    },
  ],
  "endingBalance": "4735.00",
  "endingDate": "2026-06-09",
  "events": [
    {
      "amount": "-65.00",
      "assumption": "pre_window_on_first_day",
      "date": "2026-05-20",
      "itemId": "<uuid>",
      "label": "Mid-month bill",
      "occurrenceDate": "2026-05-16",
      "occurrenceKey": "<uuid>|2026-05-16",
      "originalDate": "2026-05-16",
    },
  ],
  "fromDate": "2026-05-20",
  "horizonDays": 20,
  "incomeNotArrived": [],
  "lowestDate": "2026-05-20",
  "lowestProjected": "1735.00",
  "matches": [],
  "maxSafeExtra": "1535.00",
  "overdueAssumedPaid": [],
  "overdueOutsideForecast": [
    {
      "amount": "-65.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Mid-month bill",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
  ],
  "projectedExpenses": "65.00",
  "projectedIncome": "3000.00",
  "snapshotAt": null,
  "snapshotSource": null,
  "startingBalance": "1800.00",
  "status": "no_data",
  "toDate": "2026-06-09",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > no snapshot: the starting-balance fallback with flagged and unflagged rows 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "2500.00",
  "cashBuffer": "300.00",
  "daily": [
    {
      "balance": "2500.00",
      "date": "2026-05-14",
    },
    {
      "balance": "1000.00",
      "date": "2026-05-15",
    },
    {
      "balance": "1000.00",
      "date": "2026-05-16",
    },
    {
      "balance": "1000.00",
      "date": "2026-05-17",
    },
    {
      "balance": "1000.00",
      "date": "2026-05-18",
    },
    {
      "balance": "1000.00",
      "date": "2026-05-19",
    },
    {
      "balance": "920.00",
      "date": "2026-05-20",
    },
    {
      "balance": "920.00",
      "date": "2026-05-21",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-22",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-23",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-24",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-25",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-26",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-27",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-28",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-29",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-30",
    },
    {
      "balance": "2720.00",
      "date": "2026-05-31",
    },
    {
      "balance": "1220.00",
      "date": "2026-06-01",
    },
    {
      "balance": "1220.00",
      "date": "2026-06-02",
    },
    {
      "balance": "1220.00",
      "date": "2026-06-03",
    },
    {
      "balance": "1220.00",
      "date": "2026-06-04",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-05",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-06",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-07",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-08",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-09",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-10",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-11",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-12",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-13",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-14",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-15",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-16",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-17",
    },
    {
      "balance": "3020.00",
      "date": "2026-06-18",
    },
    {
      "balance": "4820.00",
      "date": "2026-06-19",
    },
    {
      "balance": "4820.00",
      "date": "2026-06-20",
    },
    {
      "balance": "4820.00",
      "date": "2026-06-21",
    },
    {
      "balance": "4820.00",
      "date": "2026-06-22",
    },
    {
      "balance": "4820.00",
      "date": "2026-06-23",
    },
  ],
  "endingBalance": "4820.00",
  "endingDate": "2026-06-23",
  "events": [
    {
      "amount": "-1500.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-05-01",
      "occurrenceKey": "<uuid>|2026-05-01",
      "originalDate": "2026-05-01",
    },
    {
      "amount": "-1500.00",
      "assumption": null,
      "date": "2026-06-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-06-01",
      "occurrenceKey": "<uuid>|2026-06-01",
      "originalDate": "2026-06-01",
    },
  ],
  "fromDate": "2026-05-14",
  "horizonDays": 40,
  "incomeNotArrived": [
    {
      "amount": "1800.00",
      "daysOverdue": 6,
      "dueDate": "2026-05-08",
      "itemId": "<uuid>",
      "label": "Paycheck",
      "occurrenceDate": "2026-05-08",
      "planKey": "<uuid>|2026-05-08",
    },
  ],
  "lowestDate": "2026-05-20",
  "lowestProjected": "920.00",
  "matches": [],
  "maxSafeExtra": "620.00",
  "overdueAssumedPaid": [],
  "overdueOutsideForecast": [
    {
      "amount": "-1500.00",
      "daysOverdue": 43,
      "dueDate": "2026-04-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-04-01",
      "planKey": "<uuid>|2026-04-01",
    },
  ],
  "projectedExpenses": "3080.00",
  "projectedIncome": "5400.00",
  "snapshotAt": null,
  "snapshotSource": null,
  "startingBalance": "2500.00",
  "status": "no_data",
  "toDate": "2026-06-23",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > snapshot with no account pointer: manual rows count, Plaid rows do not 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "1475.00",
  "cashBuffer": "0.00",
  "daily": [
    {
      "balance": "1475.00",
      "date": "2026-05-14",
    },
    {
      "balance": "1475.00",
      "date": "2026-05-15",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-16",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-17",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-18",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-19",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-20",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-21",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-22",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-23",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-24",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-25",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-26",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-27",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-28",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-29",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-30",
    },
    {
      "balance": "1415.00",
      "date": "2026-05-31",
    },
    {
      "balance": "1415.00",
      "date": "2026-06-01",
    },
    {
      "balance": "1415.00",
      "date": "2026-06-02",
    },
    {
      "balance": "1415.00",
      "date": "2026-06-03",
    },
  ],
  "endingBalance": "1415.00",
  "endingDate": "2026-06-03",
  "events": [
    {
      "amount": "-60.00",
      "assumption": null,
      "date": "2026-05-16",
      "itemId": "<uuid>",
      "label": "Water",
      "occurrenceDate": "2026-05-16",
      "occurrenceKey": "<uuid>|2026-05-16",
      "originalDate": "2026-05-16",
    },
  ],
  "fromDate": "2026-05-14",
  "horizonDays": 20,
  "incomeNotArrived": [],
  "lowestDate": null,
  "lowestProjected": "1175.00",
  "matches": [],
  "maxSafeExtra": "1175.00",
  "overdueAssumedPaid": [],
  "overdueOutsideForecast": [
    {
      "amount": "-60.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Water",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
  ],
  "projectedExpenses": "60.00",
  "projectedIncome": "300.00",
  "snapshotAt": "2026-05-12T16:00:00.000Z",
  "snapshotSource": "manual",
  "startingBalance": "1175.00",
  "status": "ready",
  "toDate": "2026-06-03",
}
`;

exports[`PR4a golden — computeCashSignal output, byte for byte > ties and edge paths: same-day bills with a dragged plan, the day-before-snapshot bill, a recovered moved bill 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "1880.00",
  "cashBuffer": "200.00",
  "daily": [
    {
      "balance": "1880.00",
      "date": "2026-05-14",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-15",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-16",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-17",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-18",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-19",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-20",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-21",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-22",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-23",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-24",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-25",
    },
    {
      "balance": "1624.63",
      "date": "2026-05-26",
    },
    {
      "balance": "1569.63",
      "date": "2026-05-27",
    },
    {
      "balance": "1569.63",
      "date": "2026-05-28",
    },
    {
      "balance": "1569.63",
      "date": "2026-05-29",
    },
    {
      "balance": "1569.63",
      "date": "2026-05-30",
    },
    {
      "balance": "1569.63",
      "date": "2026-05-31",
    },
    {
      "balance": "1569.63",
      "date": "2026-06-01",
    },
    {
      "balance": "1569.63",
      "date": "2026-06-02",
    },
    {
      "balance": "1569.63",
      "date": "2026-06-03",
    },
    {
      "balance": "1569.63",
      "date": "2026-06-04",
    },
    {
      "balance": "1569.63",
      "date": "2026-06-05",
    },
    {
      "balance": "1569.63",
      "date": "2026-06-06",
    },
    {
      "balance": "1499.63",
      "date": "2026-06-07",
    },
    {
      "balance": "1499.63",
      "date": "2026-06-08",
    },
    {
      "balance": "1499.63",
      "date": "2026-06-09",
    },
    {
      "balance": "1499.63",
      "date": "2026-06-10",
    },
    {
      "balance": "1499.63",
      "date": "2026-06-11",
    },
    {
      "balance": "1404.63",
      "date": "2026-06-12",
    },
    {
      "balance": "1404.63",
      "date": "2026-06-13",
    },
  ],
  "endingBalance": "1404.63",
  "endingDate": "2026-06-13",
  "events": [
    {
      "amount": "-30.00",
      "assumption": null,
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Water",
      "occurrenceDate": "2026-05-15",
      "occurrenceKey": "<uuid>|2026-05-15",
      "originalDate": "2026-05-15",
    },
    {
      "amount": "-45.00",
      "assumption": null,
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Internet",
      "occurrenceDate": "2026-05-15",
      "occurrenceKey": "<uuid>|2026-05-15",
      "originalDate": "2026-05-15",
    },
    {
      "amount": "-95.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-05-12",
      "occurrenceKey": "<uuid>|2026-05-12",
      "originalDate": "2026-05-12",
    },
    {
      "amount": "-70.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Early bill",
      "occurrenceDate": "2026-05-07",
      "occurrenceKey": "<uuid>|2026-05-07",
      "originalDate": "2026-05-07",
    },
    {
      "amount": "-55.00",
      "assumption": null,
      "date": "2026-05-27",
      "itemId": "<uuid>",
      "label": "Moved bill",
      "occurrenceDate": "2026-02-15",
      "occurrenceKey": "<uuid>|2026-02-15",
      "originalDate": "2026-05-27",
    },
    {
      "amount": "-70.00",
      "assumption": null,
      "date": "2026-06-07",
      "itemId": "<uuid>",
      "label": "Early bill",
      "occurrenceDate": "2026-06-07",
      "occurrenceKey": "<uuid>|2026-06-07",
      "originalDate": "2026-06-07",
    },
    {
      "amount": "-95.00",
      "assumption": null,
      "date": "2026-06-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-06-12",
      "occurrenceKey": "<uuid>|2026-06-12",
      "originalDate": "2026-06-12",
    },
  ],
  "fromDate": "2026-05-14",
  "horizonDays": 30,
  "incomeNotArrived": [],
  "lowestDate": "2026-06-12",
  "lowestProjected": "1404.63",
  "matches": [],
  "maxSafeExtra": "1204.63",
  "overdueAssumedPaid": [],
  "overdueOutsideForecast": [
    {
      "amount": "-70.00",
      "daysOverdue": 37,
      "dueDate": "2026-04-07",
      "itemId": "<uuid>",
      "label": "Early bill",
      "occurrenceDate": "2026-04-07",
      "planKey": "<uuid>|2026-04-07",
    },
    {
      "amount": "-95.00",
      "daysOverdue": 32,
      "dueDate": "2026-04-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-04-12",
      "planKey": "<uuid>|2026-04-12",
    },
    {
      "amount": "-45.00",
      "daysOverdue": 29,
      "dueDate": "2026-04-15",
      "itemId": "<uuid>",
      "label": "Internet",
      "occurrenceDate": "2026-04-15",
      "planKey": "<uuid>|2026-04-15",
    },
    {
      "amount": "-30.00",
      "daysOverdue": 29,
      "dueDate": "2026-04-15",
      "itemId": "<uuid>",
      "label": "Water",
      "occurrenceDate": "2026-04-15",
      "planKey": "<uuid>|2026-04-15",
    },
  ],
  "projectedExpenses": "475.37",
  "projectedIncome": "0.00",
  "snapshotAt": "2026-05-08T15:00:00.000Z",
  "snapshotSource": "plaid",
  "startingBalance": "1880.00",
  "status": "ready",
  "toDate": "2026-06-13",
}
`;

exports[`PR4b golden — the snapshot rule > counts rows shown to happen after the read, holds rows the balance already had 1`] = `
{
  "acceptedImpact": "0.00",
  "bankToday": "3130.00",
  "cashBuffer": "500.00",
  "daily": [
    {
      "balance": "3130.00",
      "date": "2026-05-14",
    },
    {
      "balance": "1385.00",
      "date": "2026-05-15",
    },
    {
      "balance": "1385.00",
      "date": "2026-05-16",
    },
    {
      "balance": "1385.00",
      "date": "2026-05-17",
    },
    {
      "balance": "1385.00",
      "date": "2026-05-18",
    },
    {
      "balance": "1385.00",
      "date": "2026-05-19",
    },
    {
      "balance": "1385.00",
      "date": "2026-05-20",
    },
    {
      "balance": "1385.00",
      "date": "2026-05-21",
    },
    {
      "balance": "3245.00",
      "date": "2026-05-22",
    },
    {
      "balance": "3245.00",
      "date": "2026-05-23",
    },
    {
      "balance": "3245.00",
      "date": "2026-05-24",
    },
    {
      "balance": "3107.00",
      "date": "2026-05-25",
    },
    {
      "balance": "3107.00",
      "date": "2026-05-26",
    },
    {
      "balance": "3107.00",
      "date": "2026-05-27",
    },
    {
      "balance": "3107.00",
      "date": "2026-05-28",
    },
    {
      "balance": "3107.00",
      "date": "2026-05-29",
    },
    {
      "balance": "3107.00",
      "date": "2026-05-30",
    },
    {
      "balance": "2957.00",
      "date": "2026-05-31",
    },
    {
      "balance": "1457.00",
      "date": "2026-06-01",
    },
    {
      "balance": "1457.00",
      "date": "2026-06-02",
    },
    {
      "balance": "1457.00",
      "date": "2026-06-03",
    },
    {
      "balance": "1457.00",
      "date": "2026-06-04",
    },
    {
      "balance": "3457.00",
      "date": "2026-06-05",
    },
    {
      "balance": "3457.00",
      "date": "2026-06-06",
    },
    {
      "balance": "3457.00",
      "date": "2026-06-07",
    },
    {
      "balance": "3457.00",
      "date": "2026-06-08",
    },
    {
      "balance": "3457.00",
      "date": "2026-06-09",
    },
    {
      "balance": "3457.00",
      "date": "2026-06-10",
    },
    {
      "balance": "3457.00",
      "date": "2026-06-11",
    },
    {
      "balance": "3362.00",
      "date": "2026-06-12",
    },
    {
      "balance": "3242.00",
      "date": "2026-06-13",
    },
    {
      "balance": "3242.00",
      "date": "2026-06-14",
    },
    {
      "balance": "3242.00",
      "date": "2026-06-15",
    },
    {
      "balance": "3202.00",
      "date": "2026-06-16",
    },
    {
      "balance": "3202.00",
      "date": "2026-06-17",
    },
    {
      "balance": "3187.00",
      "date": "2026-06-18",
    },
    {
      "balance": "5187.00",
      "date": "2026-06-19",
    },
    {
      "balance": "5047.00",
      "date": "2026-06-20",
    },
    {
      "balance": "5047.00",
      "date": "2026-06-21",
    },
    {
      "balance": "5047.00",
      "date": "2026-06-22",
    },
    {
      "balance": "5047.00",
      "date": "2026-06-23",
    },
    {
      "balance": "5047.00",
      "date": "2026-06-24",
    },
    {
      "balance": "5009.00",
      "date": "2026-06-25",
    },
    {
      "balance": "5009.00",
      "date": "2026-06-26",
    },
    {
      "balance": "5009.00",
      "date": "2026-06-27",
    },
    {
      "balance": "5009.00",
      "date": "2026-06-28",
    },
  ],
  "endingBalance": "5009.00",
  "endingDate": "2026-06-28",
  "events": [
    {
      "amount": "-1500.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-05-01",
      "occurrenceKey": "<uuid>|2026-05-01",
      "originalDate": "2026-05-01",
    },
    {
      "amount": "-95.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-05-12",
      "occurrenceKey": "<uuid>|2026-05-12",
      "originalDate": "2026-05-12",
    },
    {
      "amount": "-150.00",
      "assumption": "overdue_assumed_unpaid",
      "date": "2026-05-15",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-04-30",
      "occurrenceKey": "avalanche:extra|2026-04-30",
      "originalDate": "2026-04-30",
    },
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-05-22",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-05-20",
      "occurrenceKey": "<uuid>|2026-05-20",
      "originalDate": "2026-05-22",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-05-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-05-25",
      "occurrenceKey": "debt:<uuid>|2026-05-25",
      "originalDate": "2026-05-25",
    },
    {
      "amount": "-150.00",
      "assumption": null,
      "date": "2026-05-31",
      "itemId": "avalanche:extra",
      "label": "Avalanche extra payment",
      "occurrenceDate": "2026-05-31",
      "occurrenceKey": "avalanche:extra|2026-05-31",
      "originalDate": "2026-05-31",
    },
    {
      "amount": "-1500.00",
      "assumption": null,
      "date": "2026-06-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-06-01",
      "occurrenceKey": "<uuid>|2026-06-01",
      "originalDate": "2026-06-01",
    },
    {
      "amount": "-95.00",
      "assumption": null,
      "date": "2026-06-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-06-12",
      "occurrenceKey": "<uuid>|2026-06-12",
      "originalDate": "2026-06-12",
    },
    {
      "amount": "-120.00",
      "assumption": null,
      "date": "2026-06-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-06-13",
      "occurrenceKey": "<uuid>|2026-06-13",
      "originalDate": "2026-06-13",
    },
    {
      "amount": "-40.00",
      "assumption": null,
      "date": "2026-06-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-06-16",
      "occurrenceKey": "<uuid>|2026-06-16",
      "originalDate": "2026-06-16",
    },
    {
      "amount": "-15.00",
      "assumption": null,
      "date": "2026-06-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-06-18",
      "occurrenceKey": "<uuid>|2026-06-18",
      "originalDate": "2026-06-18",
    },
    {
      "amount": "-140.00",
      "assumption": null,
      "date": "2026-06-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-06-20",
      "occurrenceKey": "<uuid>|2026-06-20",
      "originalDate": "2026-06-20",
    },
    {
      "amount": "-38.00",
      "assumption": null,
      "date": "2026-06-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-06-25",
      "occurrenceKey": "debt:<uuid>|2026-06-25",
      "originalDate": "2026-06-25",
    },
  ],
  "fromDate": "2026-05-14",
  "horizonDays": 45,
  "incomeNotArrived": [
    {
      "amount": "2000.00",
      "daysOverdue": 6,
      "dueDate": "2026-05-08",
      "itemId": "<uuid>",
      "label": "Paycheck",
      "occurrenceDate": "2026-05-08",
      "planKey": "<uuid>|2026-05-08",
    },
  ],
  "lowestDate": "2026-05-15",
  "lowestProjected": "1385.00",
  "matches": [
    {
      "ambiguous": false,
      "confidence": "medium",
      "dayDelta": 13,
      "difference": "-3.00",
      "offCurve": false,
      "planAmount": "-38.00",
      "planDate": "2026-04-25",
      "planItemId": "debt:<uuid>",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-35.00",
      "txnId": "<uuid>",
    },
  ],
  "maxSafeExtra": "885.00",
  "overdueAssumedPaid": [
    {
      "confidence": "medium",
      "daysOverdue": 19,
      "dueDate": "2026-04-25",
      "itemId": "debt:<uuid>",
      "label": "Golden Card minimum",
      "occurrenceDate": "2026-04-25",
      "planAmount": "-38.00",
      "planKey": "debt:<uuid>|2026-04-25",
      "txnAmount": "-35.00",
      "txnId": "<uuid>",
      "unpaidRemainder": "-3.00",
    },
  ],
  "overdueOutsideForecast": [
    {
      "amount": "-1500.00",
      "daysOverdue": 43,
      "dueDate": "2026-04-01",
      "itemId": "<uuid>",
      "label": "Rent",
      "occurrenceDate": "2026-04-01",
      "planKey": "<uuid>|2026-04-01",
    },
    {
      "amount": "-95.00",
      "daysOverdue": 32,
      "dueDate": "2026-04-12",
      "itemId": "<uuid>",
      "label": "Phone",
      "occurrenceDate": "2026-04-12",
      "planKey": "<uuid>|2026-04-12",
    },
    {
      "amount": "-120.00",
      "daysOverdue": 31,
      "dueDate": "2026-04-13",
      "itemId": "<uuid>",
      "label": "Insurance",
      "occurrenceDate": "2026-04-13",
      "planKey": "<uuid>|2026-04-13",
    },
    {
      "amount": "-40.00",
      "daysOverdue": 28,
      "dueDate": "2026-04-16",
      "itemId": "<uuid>",
      "label": "Gym",
      "occurrenceDate": "2026-04-16",
      "planKey": "<uuid>|2026-04-16",
    },
    {
      "amount": "-15.00",
      "daysOverdue": 26,
      "dueDate": "2026-04-18",
      "itemId": "<uuid>",
      "label": "Streaming",
      "occurrenceDate": "2026-04-18",
      "planKey": "<uuid>|2026-04-18",
    },
    {
      "amount": "-140.00",
      "daysOverdue": 24,
      "dueDate": "2026-04-20",
      "itemId": "<uuid>",
      "label": "Utility",
      "occurrenceDate": "2026-04-20",
      "planKey": "<uuid>|2026-04-20",
    },
  ],
  "projectedExpenses": "4211.00",
  "projectedIncome": "6000.00",
  "snapshotAt": "2026-05-08T15:00:00.000Z",
  "snapshotSource": "plaid",
  "startingBalance": "3220.00",
  "status": "ready",
  "toDate": "2026-06-28",
}
`;
